Comentario de TP

--- a/pages/detalleDeCursoPython.html
+++ b/pages/detalleDeCursoPython.html
@@ -24,10 +24,10 @@
             </div>
         </nav>
         <div class="menuprincipal">
-            <a href="./inicioSesion.html">Iniciar Sesion</a>
+            <a href="../index.html">Inicio</a>
             <a href="./calendario.html">Calendario</a>
-            <a href="#">Contacto</a>
-            <a href="#">Acerca de</a>
+            <a href="./paginaContacto.html">Contacto</a>
+            <a href="./inicioSesion.html">Iniciar Sesion</a>
         </div>
     </header>
     <main>
