--- a/pages/inicioSesion.html
+++ b/pages/inicioSesion.html
@@ -24,10 +24,10 @@
             </div>
         </nav>
         <div class="menuprincipal">
-            <a href="#">Iniciar Sesion</a>
+            <a href="../index.html">Inicio</a>
             <a href="./calendario.html">Calendario</a>
-            <a href="#">Contacto</a>
-            <a href="#">Acerca de</a>
+            <a href="./paginaContacto.html">Contacto</a>
+            <a href="#">Iniciar Sesion</a>
         </div>
     </header>
     <main>
@@ -56,7 +56,33 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="Nosotros">
+            <div class="Datos paso2">
+                <ul>
+                    <li>
+                        <p>Santiago Montero</p>
+                    </li>
+                    <li>
+                        <p>Sebastian Marcheschi</p>
+                    </li>
+                    <li>
+                        <p>Luciana Rosito</p>
+                    </li>
+                    <li>
+                        <p> Sofia Alasina</p>
+                    </li>
+                </ul>
 
+            </div>
+            <div class="Menu paso2">
+                <p>Menu Inferior</p>
+            </div>
+            <div class="Redes paso2">
+                <p>Link a redes sociales</p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
