--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             </div>
         </nav>
         <div class="menuprincipal">
-            <a href="./pages/inicioSesion.html">Iniciar Sesion</a>
+            <a href="#">Inicio</a>
             <a href="./pages/calendario.html">Calendario</a>
-            <a href="#">Contacto</a>
-            <a href="#">Acerca de</a>
+            <a href="./pages/paginaContacto.html">Contacto</a>
+            <a href="./pages/inicioSesion.html">Iniciar Sesion</a>
         </div>
     </header>
     <main>
