--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -24,10 +24,10 @@
             </div>
         </nav>
         <div class="menuprincipal">
-            <a href="./inicioSesion.html">Iniciar Sesion</a>
+            <a href="../index.html">Inicio</a>
             <a href="#">Calendario</a>
-            <a href="#">Contacto</a>
-            <a href="#">Acerca de</a>
+            <a href="./paginaContacto.html">Contacto</a>
+            <a href="./inicioSesion.html">Iniciar Sesion</a>
         </div>
     </header>
     <main>
@@ -83,7 +83,7 @@
             </div>
             <div class="day">
                 <p>11</p>
-                <a class="link-curso" href="./detalleDeCursoSql.html">
+                <a class="boton-calendario" href="./detalleDeCursoSql.html">
                     <p class="texto_curso">Curso SQL Server</p>
                 </a>
             </div>
@@ -110,7 +110,7 @@
             </div>
             <div class="day">
                 <p>19</p>
-                <a class="link-curso" href="./detalleDeCursoPython.html">
+                <a class="boton-calendario" href="./detalleDeCursoPython.html">
                     <p class="texto_curso">Curso Python Developer</p>
                 </a>
             </div>
@@ -125,7 +125,7 @@
             </div>
             <div class="day">
                 <p>23</p>
-                <a class="link-curso" href="./detalleDeCursoPython.html">
+                <a class="boton-calendario" href="./detalleDeCursoPython.html">
                     <p class="texto_curso">Curso Python Developer</p>
                 </a>
             </div>
@@ -158,7 +158,7 @@
             </div>
             <div class="day">
                 <p>2</p>
-                <a class="link-curso" href="./detalleDeCursoPython.html">
+                <a class="boton-calendario" href="./detalleDeCursoPython.html">
                     <p class="texto_curso">Curso Python Developer</p>
                 </a>
             </div>
