--- a/pages/giftCard.html
+++ b/pages/giftCard.html
@@ -39,7 +39,7 @@
                     <span class="vista__precio--texto">$10.000</span>
                 </div>
                 <div>
-                    <h1 class="vista__nombre-destinatario">Destinatario</h1>
+                    <h1 class="vista__nombre--destinatario">Destinatario</h1>
                 </div>
             </article>
             <article Class="texto-referencia">
@@ -65,16 +65,23 @@
                     <div class="formulario__colores--color3"> </div>
                     <div class="formulario__colores--color4"> </div>
                     <div class="formulario__colores--color5"> </div>
-                </div>
 
+                    <div>
+                        <input type="radio" name="colorFuente" id="color1" />
+                    </div>
+                    <div>
+                        <input type="radio" name="colorFuente" id="color2" />
+                    </div>
+                    <div>
+                        <input type="radio" name="colorFuente" id="color3" />
+                    </div>
+                    <div>
+                        <input type="radio" name="colorFuente" id="color4" />
+                    </div>
+                    <div>
+                        <input type="radio" name="colorFuente" id="color5" />
+                    </div>
 
-
-                <div class="seleccion-colores">
-                    <input type="radio" name="colorFuente" id="color1" />
-                    <input type="radio" name="colorFuente" id="color2" />
-                    <input type="radio" name="colorFuente" id="color3" />
-                    <input type="radio" name="colorFuente" id="color4" />
-                    <input type="radio" name="colorFuente" id="color5" />
                 </div>
                 <br />
                 <label for="tamanioFuente">Tamaño de la fuente: </label>
@@ -84,13 +91,24 @@
                     <span>32px </span>
                     <span>48px </span>
                     <span>60px </span>
-                </div>
-                <div class="seleccion-tamanio">
-                    <input type="radio" name="tamanioFuente" id="20px" />
-                    <input type="radio" name="tamanioFuente" id="28px" />
-                    <input type="radio" name="tamanioFuente" id="32px" />
-                    <input type="radio" name="tamanioFuente" id="48px" />
-                    <input type="radio" name="tamanioFuente" id="60px" />
+
+                    <div>
+                        <input type="radio" name="tamanioFuente" id="20px" />
+                    </div>
+                    <div>
+                        <input type="radio" name="tamanioFuente" id="28px" />
+                    </div>
+                    <div>
+                        <input type="radio" name="tamanioFuente" id="32px" />
+                    </div>
+                    <div>
+                        <input type="radio" name="tamanioFuente" id="48px" />
+                    </div>
+                    <div>
+                        <input type="radio" name="tamanioFuente" id="60px" />
+                    </div>
+
+
                 </div>
                 <br />
                 <div>
@@ -101,26 +119,30 @@
                 <br />
                 <label for="ubicacion">Ubicacion: </label>
                 <div class="formulario__ubicacion">
+
                     <div class="formulario__ubicacion--ubicacion1">
                         <div class="ubicacion1">
                         </div>
                     </div>
                     <div class="formulario__ubicacion--ubicacion2">
-                        <div class="ubicacion1">
+                        <div class="ubicacion2">
                         </div>
                     </div>
                     <div class="formulario__ubicacion--ubicacion3">
-                        <div class="ubicacion1">
+                        <div class="ubicacion3">
                         </div>
                     </div>
-                </div>
 
-                <div class="seleccion-ubicacion">
-                    <input type="radio" name="ubicacion" id="ubicacion1" />
-                    <input type="radio" name="ubicacion" id="ubicacion2" />
-                    <input type="radio" name="ubicacion" id="ubicacion3" />
+                    <div>
+                        <input type="radio" name="ubicacion" id="ubicacion1" />
+                    </div>
+                    <div>
+                        <input type="radio" name="ubicacion" id="ubicacion2" />
+                    </div>
+                    <div>
+                        <input type="radio" name="ubicacion" id="ubicacion3" />
+                    </div>
                 </div>
-
                 <br />
                 <label for="fondoTarjeta"> Fondo: </label>
                 <div class="formulario__fondo">
@@ -130,19 +152,26 @@
                     <img src="../assets/fondosCard/fondo3.jpg" alt="Fondo cuadrados azules"
                         class="formulario__fondo--fondo3">
                     <img src="../assets/fondosCard/fondo4.jpg" alt="Fondo rama" class="formulario__fondo--fondo4" />
-                </div>
+              
 
-                <div class="seleccion-fondo">
+                <div>
                     <input type="radio" name="fondoTarjeta" id="fondo1" />
+                </div>
+                <div>
                     <input type="radio" name="fondoTarjeta" id="fondo2" />
+                </div>
+                <div>
                     <input type="radio" name="fondoTarjeta" id="fondo3" />
+                </div>
+                <div>
                     <input type="radio" name="fondoTarjeta" id="fondo4" />
                 </div>
+            </div>
                 <br />
                 <button type="submit">
                     <a href="../pages/pagoDeGift.html" target="_blank">Confirmar</a>
                 </button>
-                <!--Vuelve a Home o a una antes-->
+
                 <button type="button"> Volver </button>
 
             </form>
