--- a/pages/detalleDeCursoSql.html
+++ b/pages/detalleDeCursoSql.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/Style.css">
-    <link rel="stylesheet" type="text/css" href="../css/detalleSqlServer.css">
+    <link rel="stylesheet" type="text/css" href="../css/detalle.css">
     <title>Detalle del Curso</title>
     <link rel="icon" href="../assets/icon/icono.png">
 </head>
@@ -38,6 +38,8 @@
             <div class="curso-info">
                 <h1>SQL Server</h1>
                 <p>$105.000 </p>
+                <h4>Modalidad</h4>
+                <p>Presencial</p>
                 <h4>Duración</h4>
                 <p>18hs</p>
                 <h4>Sobre el curso</h4>
@@ -49,7 +51,11 @@
                     <li>Fundamentos de Bases de Datos</li>
                     <li>Conceptos Básicos de Programación</li>
                 </ul>
-                <button class="btn-inscribirse">Inscribirse</button>
+                <button>Inscribirse</button>
+                <a href="/pages/giftCard.html">
+                    <button>Regalar GiftCard</button>
+                </a>
+            </div>
             </div>
         </section>
 
@@ -100,7 +106,9 @@
                     <p>Python Developer</p>
                     <p>21hs</p>
                     <p>$85.000</p>
-                    <button class="btn-detalle">Detalle del curso</button>
+                    <a href="/pages/detalleDeCursoPython.html">
+                        <button>Detalle del curso</button>
+                    </a>
                 </div>
                 <div class="curso-relacionado">
                     <div class="php-imagen">
@@ -109,7 +117,7 @@
                     <p>Introducción a PHP</p>
                     <p>12hs</p>
                     <p>$67.000</p>
-                    <button class="btn-detalle">Detalle del curso</button>
+                    <button>Detalle del curso</button>
                 </div>
                 <div class="curso-relacionado">
                     <div class="javascript-imagen">
@@ -118,7 +126,7 @@
                     <p>Javascript PWA</p>
                     <p>18hs</p>
                     <p>$65.000</p>
-                    <button class="btn-detalle">Detalle del curso</button>
+                    <button>Detalle del curso</button>
                 </div>
             </div>
         </section>
