--- a/pages/inicioSesion.html
+++ b/pages/inicioSesion.html
@@ -30,7 +30,7 @@
             <a href="#">Iniciar Sesion</a>
         </div>
     </header>
-    <main>
+    <main class="main">
         <div class="contenedor-login">
             <div class="login">
                 <div>
@@ -44,7 +44,7 @@
                         <label class="form-check-label" for="exampleCheck1">No soy un robot</label>
                     </div>
                     <div class="boton-login">
-                        <button type="submit" class="btn" title="Ingresar" name="Ingresar">Login</button>
+                        <a href="../index.html" class="btn" title="Ingresar" name="Ingresar">Login</a>
                     </div>
                 </form>
                 <div class="pie-form1">
