--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -88,7 +88,7 @@
                 </a>
             </div>
             <div class="day">
-                <p>12</p>
+                <p class="today">12</p>
             </div>
             <div class="day">
                 <p>13</p>
