--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
             </div>
         </nav>
         <div class="menuprincipal">
-            <a href="#">Inicio</a>
+            <a href="./index.html">Inicio</a>
             <a href="./pages/calendario.html">Calendario</a>
             <a href="./pages/paginaContacto.html">Contacto</a>
             <a href="./pages/inicioSesion.html">Iniciar Sesion</a>
+            <a href="./pages/giftCard.html">GiftCard</a>
         </div>
     </header>
     <main>
@@ -130,7 +131,10 @@
             <article>
                 <h2>Medios de pago</h2>
                 <div class="Pagos">
-
+                    <div class="MercadoPago ajuste"><img src="./assets/image/mercagopago.jpg" alt="MP"></div>
+                    <div class="Visa ajuste"><img src="./assets/fondosCard/visa-logo.jpg" alt="Visa"></div>
+                    <div class="Mastercard ajuste"><img src="./assets/fondosCard/mastercard-logo.jpg" alt="Mastercard"></div>
+                    <div class="AmericanExpress ajuste"><img src="./assets/fondosCard/American-logo.jpg" alt="American"></div>
                 </div>
             </article>
         </section>
