--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -21,13 +21,16 @@
             <input type="search" placeholder="Buscar...">
             <div class="Carrito">
                 <img src="../assets/image/carrito.png" alt="Carrito">
+                <p>1</p>
             </div>
         </nav>
         <div class="menuprincipal">
             <a href="../index.html">Inicio</a>
-            <a href="#">Calendario</a>
-            <a href="./paginaContacto.html">Contacto</a>
-            <a href="./inicioSesion.html">Iniciar Sesion</a>
+            <a href="../pages/calendario.html">Calendario Academico</a>
+            <a href="../pages/CursosparaEmpresas.html">Empresas</a>
+            <a href="../pages/giftCard.html">GiftCard</a>
+            <a href="../pages/paginaContacto.html">Contacto</a>
+            <a href="../pages/inicioSesion.html">Iniciar Sesion</a>
         </div>
     </header>
     <main>
@@ -190,10 +193,17 @@
 
             </div>
             <div class="Menu paso2">
-                <p>Menu Inferior</p>
+                <ul>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../pages/calendario.html">Calendario Academico</a></li>
+                    <li><a href="../pages/CursosparaEmpresas.html">Empresas</a></li>
+                    <li><a href="../pages/giftCard.html">GiftCard</a></li>
+                    <li><a href="../pages/paginaContacto.html">Contacto</a></li>
+                    <li><a href="../pages/inicioSesion.html">Iniciar Sesion</a></li> 
+                </ul>
             </div>
             <div class="Redes paso2">
-                <p>Link a redes sociales</p>
+                <img src="../assets/image/redes.jpg" alt="redes">
             </div>
         </div>
     </footer>
